@@ -31,7 +31,7 @@ function DBconnect(&$error) {
 	global $DB;
 
 	if (isset($DB['DB'])) {
-		$error=_('Cannot create another database connection.');
+		$error = _('Cannot create another database connection.');
 		return false;
 	}
 
@@ -52,20 +52,13 @@ function DBconnect(&$error) {
 
 		switch ($DB['TYPE']) {
 			case ZBX_DB_MYSQL:
-				$mysql_server = $DB['SERVER'].(!empty($DB['PORT']) ? ':'.$DB['PORT'] : '');
-
-				if (!$DB['DB'] = @mysql_connect($mysql_server, $DB['USER'], $DB['PASSWORD'])) {
-					$error = 'Error connecting to database ['.trim(mysql_error()).']';
+				$DB['DB'] = @mysqli_connect($DB['SERVER'], $DB['USER'], $DB['PASSWORD'], $DB['DATABASE'], $DB['PORT']);
+				if (!$DB['DB']) {
+					$error = 'Error connecting to database ['.trim(mysqli_connect_error()).']';
 					$result = false;
 				}
 				else {
-					if (!mysql_select_db($DB['DATABASE'])) {
-						$error = 'Error database in selection ['.trim(mysql_error()).']';
-						$result = false;
-					}
-					else {
-						DBexecute('SET NAMES utf8');
-					}
+					DBexecute('SET NAMES utf8');
 				}
 
 				if ($result) {
@@ -198,7 +191,7 @@ function DBclose() {
 	if (isset($DB['DB']) && !empty($DB['DB'])) {
 		switch ($DB['TYPE']) {
 			case ZBX_DB_MYSQL:
-				$result = mysql_close($DB['DB']);
+				$result = mysqli_close($DB['DB']);
 				break;
 			case ZBX_DB_POSTGRESQL:
 				$result = pg_close($DB['DB']);
@@ -410,8 +403,8 @@ function DBselect($query, $limit = null, $offset = 0) {
 
 	switch ($DB['TYPE']) {
 		case ZBX_DB_MYSQL:
-			if (!$result = mysql_query($query, $DB['DB'])) {
-				error('Error in query ['.$query.'] ['.mysql_error().']');
+			if (!$result = mysqli_query($DB['DB'], $query)) {
+				error('Error in query ['.$query.'] ['.mysqli_error($DB['DB']).']');
 			}
 			break;
 		case ZBX_DB_POSTGRESQL:
@@ -546,8 +539,8 @@ function DBexecute($query, $skip_error_messages = 0) {
 
 	switch ($DB['TYPE']) {
 		case ZBX_DB_MYSQL:
-			if (!$result = mysql_query($query, $DB['DB'])) {
-				error('Error in query ['.$query.'] ['.mysql_error().']');
+			if (!$result = mysqli_query($DB['DB'], $query)) {
+				error('Error in query ['.$query.'] ['.mysqli_error($DB['DB']).']');
 			}
 			break;
 		case ZBX_DB_POSTGRESQL:
@@ -612,8 +605,8 @@ function DBfetch($cursor, $convertNulls = true) {
 
 	switch ($DB['TYPE']) {
 		case ZBX_DB_MYSQL:
-			if (!$result = mysql_fetch_assoc($cursor)) {
-				mysql_free_result($cursor);
+			if (!$result = mysqli_fetch_assoc($cursor)) {
+				mysqli_free_result($cursor);
 			}
 			break;
 		case ZBX_DB_POSTGRESQL:
@@ -1303,11 +1296,11 @@ function zbx_dbstr($var) {
 		case ZBX_DB_MYSQL:
 			if (is_array($var)) {
 				foreach ($var as $vnum => $value) {
-					$var[$vnum] = "'".mysql_real_escape_string($value)."'";
+					$var[$vnum] = "'".mysqli_real_escape_string($DB['DB'], $value)."'";
 				}
 				return $var;
 			}
-			return "'".mysql_real_escape_string($var)."'";
+			return "'".mysqli_real_escape_string($DB['DB'], $var)."'";
 
 		case ZBX_DB_ORACLE:
 			if (is_array($var)) {
